--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,15 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+div {
+  background-color: #dcd4cd:
+  border: 3px solid #9a816d;
+  border-radius: 8px;
+}
+
+div:hover {
+  background-color: #cabdb2;
+  border: 3px solid #9a816d;
+  border-radius: 8px;
+}
