--- a/css/main.css
+++ b/css/main.css
@@ -11,16 +11,22 @@ html {
 
 h1 {
   font-family: "Dosis", sans-serif;
+  font-size: 1.5rem;
   margin: 0;
+  padding-left: .7em;
+  font-weight: 900;
 }
 
 p {
+  font-size: 1rem;
   font-family: Georgia, serif;
+  padding-left: 1em;
+  margin-top: .5em;
 }
 
 section {
   display: block;
-  background-color: #dcd4cd:
+  background-color: #dcd4cd;
   border: 3px solid #9a816d;
   border-radius: 8px;
   padding: .2em;
@@ -33,13 +39,18 @@ section:hover {
 }
 
 ul {
-  display: block;
-  padding: 0;
+  margin: 0;
+  padding: 1em;
   line-height: 1.5rem;
-  border: 1px solid #9a816d;
+  border-top: 3px solid #9a816d;
+  border-bottom: 3px solid #9a816d;
+  float: left;
+  margin-bottom: 1em;
 }
 
 .left {
+  font-size: .875rem;
+  line-height: 1.5;
   text-align: left;
   float: left;
   width: 50%;
@@ -48,6 +59,8 @@ ul {
 }
 
 .right {
+  font-size: .875rem;
+  line-height: 1.5;
   text-align: left;
   float: right;
   width: 50%;
@@ -57,6 +70,7 @@ ul {
 }
 
 .learn {
+  margin: auto;
   background-color: #785439;
   color: #fff;
   font-family: "Dosis", sans-serif;
@@ -66,4 +80,8 @@ ul {
   font-size: 1.125rem;
   border-radius: 8px;
   text-decoration: none;
+}
+
+.list {
+  display: block;
 }
