--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,9 @@ html {
   box-sizing: inherit;
 }
 
-h1 {
-  font-family: "Dosis", sans-serif;
+h2 {
+  color: #512200;
+  font-family: Dosis, sans-serif;
   font-size: 1.5rem;
   margin: 0;
   padding-left: .7em;
@@ -18,6 +19,7 @@ h1 {
 }
 
 p {
+  color: #512200;
   font-size: 1rem;
   font-family: Georgia, serif;
   padding-left: 1em;
@@ -49,6 +51,7 @@ ul {
 }
 
 .left {
+  color: #512200;
   font-size: .875rem;
   line-height: 1.5;
   text-align: left;
@@ -59,6 +62,7 @@ ul {
 }
 
 .right {
+  color: #512200;
   font-size: .875rem;
   line-height: 1.5;
   text-align: left;
@@ -73,7 +77,7 @@ ul {
   margin: auto;
   background-color: #785439;
   color: #fff;
-  font-family: "Dosis", sans-serif;
+  font-family: Dosis, sans-serif;
   text-align: center;
   display: inline-block;
   padding: .3em;
