--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,11 @@ a.more {
   text-decoration: none;
 }
 
-a.link-card:hover {
+.link-card {
+  background-color: #dcd4cd;
+}
+
+.link-card:hover {
   background-color: #785439;
 }
 
