--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html {
   box-sizing: inherit;
 }
 
-h2 {
+.link-card h2 {
   color: #512200;
   font-family: Dosis, sans-serif;
   font-size: 1.5rem;
